# av_learn

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp  new-commit-format.sh  run-all-fromat.sh
core/: CMakeLists.txt
core/include/: audiocodec.h  codec.h  device.h  frame.h  resample.h
core/src/: audio_device.cpp  audiocodec.cpp  codec.cpp  device.cpp  frame.cpp  reample.cpp  video_device.cpp
device/: CMakeLists.txt
device/include/: device.h  resample.h
device/src/: device.cpp  reample.cpp
utils/: CMakeLists.txt
utils/include/: baseDefine.h  log.h
